<resources>
    <string name="app_name">OeppMobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordRety">Password Rety</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="nameAndSurname">Name And Surname</string>
    <string name="searchYourCourse">Search Your Course</string>
    <string name="search">Search</string>
    <string name="popularCourses">Popular Courses</string>
    <string name="myCourses">My Courses</string>
    <string name="signOut">Sign Out</string>
    <string name="findCourses">Find Courses</string>
    <string name="back">Back</string>
    <string name="startCourse">Start</string>
    <string name="getCourse">Get Course</string>
</resources>
