<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:src="@drawable/logo"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/signInActivityButton_mainActivty"
                android:background="@drawable/button_shape"
                android:text="@string/signIn"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/signUpActivityButton_mainActivty"
                android:background="@drawable/button_shape"
                android:text="@string/signUp"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <EditText
               android:id="@+id/searchTextView_mainActivity"
               style="@style/textStyle"
               android:minWidth="260dp"
               android:layout_margin="10dp"
               android:hint="@string/searchYourCourse"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
           <Button
               android:id="@+id/searchButton_mainActivity"
               android:background="@drawable/button_shape"
               android:text="@string/search"
               android:layout_margin="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
       </LinearLayout>
        <TextView
            android:text="@string/popularCourses"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
       <ListView
           android:layout_width="match_parent"
           android:layout_height="match_parent">

       </ListView>
    </LinearLayout>

</RelativeLayout>