<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="30dp">
        <ImageView
            android:src="@drawable/logo"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/email_signInActivty"
            android:hint="@string/email"
            android:layout_gravity="center"
            android:minHeight="30dp"
            android:gravity="center"
            android:minWidth="150dp"
            style="@style/textStyle"
            android:layout_marginTop="50dp"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password_signInActivty"
            android:hint="@string/password"
            android:gravity="center"
            style="@style/textStyle"
            android:layout_gravity="center"
            android:minHeight="30dp"
            android:minWidth="150dp"
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/signInButton"
            android:text="@string/signIn"
            android:minWidth="150dp"
            style="@style/textStyle"
            android:textAllCaps="false"
            android:background="@drawable/button_shape"
            android:layout_width="wrap_content"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/signUpPageButton"
            android:text="@string/signUp"
            style="@style/textStyle"
            android:background="@drawable/button_shape"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            android:minWidth="80dp"
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>